tests/ui/consts/ice-const-size-relate-126359.stderr
error[E0308]: mismatched types
  --> $DIR/ice-const-size-relate-126359.rs:12:39
   |
LL |     let _ = OppOrder::<3, u32> { arr: [0, 0, 0] };
   |                                       ^^^^^^^^^ expected `3`, found `3`
   |
   = note: expected array `[u32; 3]`
              found array `[u32; 3]`

error[E0308]: mismatched types
  --> $DIR/ice-const-size-relate-126359.rs:7:14
   |
LL |     arr: [T; N], // Array size is u8 instead of usize
   |              ^ expected `usize`, found `u8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
